--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }}</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
+    <link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico">
   </head>
 
 
@@ -24,9 +24,10 @@
 </div>
   
   <footer>
+      <div class="copyrightlines" style="text-align: center;">©GreatBaron,2019,All Rights Reserved.</div><br/>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href=#><img src="{{ site.url }}/img/minicon-email_16px.png">email</a></li>
+   <li><a href="https://github.com/AndrewImalion"><img src="{{ site.url }}/img/minicon-GitHub_16px.png">GitHub</a></li>
    </ul>
   </footer>
   </body>
