--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 </div>
   
   <footer>
-      <div class="copyrightlines" style="text-align: center;">©GreatBaron,2019,All Rights Reserved.</div><br/>
-   <ul>
+      <div class="copyrightlines" style="text-align: center;color:slategrey;font-family:'Times New Roman', Times, serif">©GreatBaron,2019,All Rights Reserved.</div><br/>
+   <ul style="text-align: center;">
    <li><a href=#><img src="{{ site.url }}/img/minicon-email_16px.png">email</a></li>
    <li><a href="https://github.com/AndrewImalion"><img src="{{ site.url }}/img/minicon-GitHub_16px.png">GitHub</a></li>
    </ul>
