--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,9 @@ ul.posts li { list-style: none; }
 .cv address, .cv .download { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 .cv address, .cv p { font-size: 1.2em; }
 .cv .download { float: right; font-size: .8em; text-transform: uppercase; }
+
+/* My Css*/
+.post-abstract {
+    font-size: 0.6em;
+    color: dimgray;
+}
