--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ ul.posts li { list-style: none; }
 
 /* My Css*/
 .post-abstract {
+    line-height:50%;
     font-size: 0.5em;
     color: #888888;
 }
