--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,11 @@ ul.posts li { list-style: none; }
     font-size: 0.6em;
     color: #888888;
 }
+
+.tag {
+    border-radius: 25px; 
+    border: 2px solid #888888; 
+    padding: 20px; 
+    width: 200px; 
+    height: 150px; 
+}
