--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,8 @@ ul.posts li { list-style: none; }
     width: 200px; 
     height: 150px; 
 }
+
+.subheading{
+    font-size: 1.5em;
+    font-style: italic;
+}
