--- a/css/main.css
+++ b/css/main.css
@@ -36,11 +36,12 @@ ul.posts li { list-style: none; }
 }
 
 .tag {
-    border-radius: 25px; 
-    border: 2px solid #888888; 
+    border-radius: 20px; 
+    border: 2px solid #888888;
+    margin: 10px;
     padding: 20px; 
-    width: 200px; 
-    height: 150px; 
+    width: auto; 
+    height: 80px; 
 }
 
 .subheading{
