--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,8 @@ ul.posts li { list-style: none; }
     font-size: 1.5em;
     font-style: italic;
 }
+
+code {
+    background-color: #dcdcdc;
+    font-family: 'Courier New ', 'Lucida Console', 'Monospace';
+}
