--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ code {
     font-family: 'Courier New ', 'Lucida Console', 'Monospace';
 }
 
-code .highlight {
+.highlight {
     border-radius: 15px; 
     border: 2px solid #888888;
     background-color: #dcdcdc;
