--- a/css/main.css
+++ b/css/main.css
@@ -36,9 +36,9 @@ ul.posts li { list-style: none; }
 }
 
 .tag {
-    border-radius: 20px; 
+    border-radius: 15px; 
     border: 2px solid #888888;
-    margin: 10px;
+    margin: 0px 10px 0px 0px;
     padding: 5px; 
     width: auto; 
     height: 80px; 
