--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,11 @@
 <li><a href="/tags">Tags</a></li>
 </ul>
     </nav>
+    
+    <h1 class="topheading">{{ page.title }}</h1>
+    <h2 class="subheading">{{ page.subtitle }}</h2>
+    <hr>
+    
 <div class="container">
 
   {{ content }}
