--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
     
     <h1 class="topheading">{{ page.title }}</h1>
     <h2 class="subheading">{{ page.subtitle }}</h2>
+    <h2 class="desheading">{{ page.description }}</h2>
     <hr>
     
 <div class="container">
