--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,14 +9,14 @@ layout: default
                         <a class="tag" href="{{ site.baseurl }}/tags#{{ tag }}" title="{{ tag }}">{{ tag }}</a>
                         {% endfor %}
                     </div>
-                    <h1>{{ page.title }}</h1>
+
                     {% comment %}
                         always create a h2 for keeping the margin , Hux
                     {% endcomment %}
                     {% comment %} if page.subtitle {% endcomment %}
-                    <h2 class="subheading">{{ page.subtitle }}</h2>
+
                     {% comment %} endif {% endcomment %}
-                    <span class="meta">Posted by <i>{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %}</i> on {{ page.date | date_to_string }}</span>
+                    <span class="meta">Posted by <i>{% if page.author %}{{ page.author }}{% else %}GreatBaron{% endif %}</i> on {{ page.date | date_to_string }}</span>
                     <hr>
                 </div>
 
