--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ code {
 
 /* Trends */
 
-.trend-shorcut{
+.trend-shortcut {
     font-family: 'Helvetica', 'Arial', 'Sans-Serif';
     border-radius: 15px;
     border: 2px solid #383838;
