--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <li><a href="/blog">Blog</a></li>
 <li><a href="/tags">Tags</a></li>
 <li><a href="{{ site.url }}/tools">Tools</a></li>
-  <!-- 不知道为啥这里不加site.url它就不给我append https:// --!>
+  <!-- 不知道为啥这里不加site.url它就不给我append https: --!>
 </ul>
     </nav>
     
