--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,7 @@
 <li><a href="/about">About</a></li>
 <li><a href="/blog">Blog</a></li>
 <li><a href="/tags">Tags</a></li>
-<li><a href="https://{{ site.url }}/tools">Tools</a></li>
-  <!-- 不知道为啥这里不加site.url它就不给我append https: --!>
+<li><a href="/tools">Tools</a></li>
 </ul>
     </nav>
     
