--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
   <body>
     <nav>
 <ul>
-<li><a href="https://andrewimalion.github.io//">Home</a></li>
-<li><a href="https://andrewimalion.github.io//about">About</a></li>
-<li><a href="https://andrewimalion.github.io//blog">Blog</a></li>
-<li><a href="https://andrewimalion.github.io//tags">Tags</a></li>
-<li><a href="https://andrewimalion.github.io/tools/">Tools</a></li>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About</a></li>
+<li><a href="/blog">Blog</a></li>
+<li><a href="/tags">Tags</a></li>
+<li><a href="tools/">Tools</a></li>
 </ul>
     </nav>
     
