--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <li><a href="/about">About</a></li>
 <li><a href="/blog">Blog</a></li>
 <li><a href="/tags">Tags</a></li>
-<li><a href="tools/">Tools</a></li>
+<li><a href="/tools">Tools</a></li>
 </ul>
     </nav>
     
